# Homeworks-OOP

./: CMakeLists.txt
Homework #1/: main.cpp
Homework #1/include/: vowel_counter.h
Homework #1/test/: tests01.cpp
src/: vowel_counter.cpp
